2004-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/Rectangle2D/Double/clone.java: New test.
	*
	gnu/testlet/java/awt/geom/Rectangle2D/Double/createIntersection.java:
	Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Double/createUnion.java:
	Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Double/isEmpty.java: Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Double/outcode.java: Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Double/setRect.java: Likwise.

	* gnu/testlet/java/awt/geom/Rectangle2D/Float/clone.java: New test.
	* gnu/testlet/java/awt/geom/Rectangle2D/Float/createIntersection.java:
	Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Float/createUnion.java:
	Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Float/isEmpty.java: Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Float/outcode.java: Likwise.
	* gnu/testlet/java/awt/geom/Rectangle2D/Float/setRect.java: Likwise.

2004-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/Rectangle2D/add.java: New test.
	* gnu/testlet/java/awt/geom/Rectangle2D/constants.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/contains.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/equals.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/getBounds2D.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/intersect.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/intersects.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/intersectsLine.java: Likewise.
	* gnu/testlet/java/awt/geom/Rectangle2D/setFrame.java: Likewise.

2004-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/geom/RectangularShape/contains.java: New test.
	* gnu/testlet/java/awt/geom/RectangularShape/getBounds.java: Ditto.
	* gnu/testlet/java/awt/geom/RectangularShape/getCenterX.java: Ditto.
	* gnu/testlet/java/awt/geom/RectangularShape/getCenterY.java: Ditto.